@@ -3,7 +3,7 @@ use base 'URI::_db';
 our $VERSION = '0.23';
 
 sub default_port { 3306 }
-sub dbi_driver   { 'mysql' }
+sub dbi_driver   { 'MariaDB' }
 sub canonical_engine { 'mysql' }
 
 sub _dbi_param_map {
